--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "@google/genai": "^1.29.0",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "express": "^5.1.0",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "@prisma/client": "^6.19.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
