--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "postinstall": "prisma generate"
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
