feat: Refactor project structure to monorepo
Restructures the project into a monorepo with separate frontend and backend workspaces. This change simplifies dependency management and allows for independent development and deployment of frontend and backend components.

Key changes include:
- Updated `package.json` to define workspaces and script commands for the monorepo.
- Modified `vite.config.ts` to use `loadEnv` for environment variables and adjust path aliases.
- Updated `tsconfig.json` to reflect the new monorepo structure and compiler options.
- Integrated Tailwind CSS directly into `index.html` for frontend styling.
- Moved shared interface definitions to `types.ts`.
- Updated `mockApi.ts` to align with new type definitions and API structure.
- Corrected metadata to include "edit" in the application name.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,17 @@
+
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES2022",
     "module": "commonjs",
-    "rootDir": "./src",
     "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "rootDir": "./src",
     "strict": true,
-    "skipLibCheck": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "sourceMap": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "prisma/seed.ts"],
+  "exclude": ["node_modules"]
 }
