feat: Setup monorepo with backend and frontend
Introduces a monorepo structure with separate frontend and backend workspaces.
Updates `package.json` to manage workspaces and uses `concurrently` for development.
Adds a `postinstall` script to generate backend code.
Updates `README.md` to reflect the new architecture and setup.
Modifies `docker-compose.yml` to include backend and frontend services.
Updates `frontend/src/services/api.ts` to correctly reference Vite environment variables for the API base URL.
Adds type reference for Vite client to resolve `import.meta.env` issues.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "book-re-life-monorepo",
   "version": "1.0.0",
@@ -8,8 +7,12 @@
     "backend"
   ],
   "scripts": {
-    "dev": "npm run dev --workspace=frontend & npm run dev --workspace=backend",
+    "dev": "concurrently \"npm:dev --workspace=frontend\" \"npm:dev --workspace=backend\"",
     "build": "npm run build --workspace=frontend && npm run build --workspace=backend",
-    "start": "npm run start --workspace=backend"
+    "start": "npm run start --workspace=backend",
+    "postinstall": "npm run generate --workspace=backend"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
