--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,82 +1,3 @@
-
-version: '3.8'
-
-services:
-  db:
-    image: postgres:15
-    container_name: bookreflife_db
-    restart: always
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432" # Expose for external tools if needed, otherwise remove
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  api:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: bookreflife_api
-    restart: always
-    depends_on:
-      db:
-        condition: service_healthy
-    env_file:
-      - ./backend/.env
-    environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - API_PORT=${API_PORT}
-    expose:
-      - ${API_PORT}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${API_PORT}/healthz"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  web:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: bookreflife_web
-    restart: always
-    expose:
-      - ${WEB_PORT} # Exposed internally to nginx
-    environment:
-      - PORT=${WEB_PORT}
-      - VITE_API_BASE_URL=/api # Nginx will proxy this
-    depends_on:
-      - api
-
-  nginx:
-    image: nginx:1.25-alpine
-    container_name: bookreflife_nginx
-    restart: always
-    ports:
-      - "${NGINX_PORT}:80"
-      # Add port 443 mapping after setting up TLS
-      # - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      # Mount certbot directories after running it
-      # - /etc/letsencrypt:/etc/letsencrypt
-    depends_on:
-      - web
-      - api
-
-volumes:
-  postgres_data:
+# This file is intentionally left blank.
+# The application has been converted to run without Docker.
+# Please see README.md for local setup and execution instructions.
