--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "frontend",
   "private": true,
@@ -12,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.29.0",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.4.1"
