fix: Resolve Vite client type errors and Prisma Decimal issues
Corrected the triple-slash directive in `api.ts` to an interface for proper Vite client type resolution.
Ensured all calculations involving Prisma `Decimal` types in `server.ts` correctly convert to numbers, preventing potential arithmetic errors in reporting and revenue calculations.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,5 @@
     /* Vite specific */
     "types": ["vite/client"]
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
