--- a/backend/package.json
+++ b/backend/package.json
@@ -16,26 +16,20 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@fastify/autoload": "^5.8.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^8.0.0",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
+    "@fastify/static": "^7.0.4",
+    "@google/genai": "^1.29.0",
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
-    "bwip-js": "^4.3.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
-    "fastify-plugin": "^4.5.1",
-    "pdfkit": "^0.15.0",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.12.12",
-    "@types/pdfkit": "^0.13.4",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
